[tool.poetry]
name = "hat-py-sdk"
version = "0.18.3"
description = ""
authors = ["rtatton <rdt17@proton.me>"]
license = "MIT"
readme = "README.md"
homepage = "https://github.com/rtatton/hat-py-sdk"
repository = "https://github.com/rtatton/hat-py-sdk"
keywords = ["dataswift", "hat", "python", "sdk"]
packages = [{ include = "hat", from = "src" }]

[tool.poetry.dependencies]
python = "^3.9"

PyJWT = { extras = ["crypto"], version = "^2.4.0" }
aiohttp = { extras = ["speedups"], version = "^3.8.1" }
aiohttp-client-cache = "^0.7.3"
asgiref = "^3.5.2"
humps = "^0.2.2"
keyring = "^23.8.2"
orjson = { optional = true, version = "^3.7.12" }
pydantic = { extras = ["dotenv"], version = "^1.9.1" }
python-ulid = "^1.1.0"

[tool.poetry.extras]
fast = ["orjson"]

[tool.poetry.dev-dependencies]
nox = "^2022.8.7"
black = "^22.6.0"
flake8 = "^5.0.2"
flake8-black = "^0.3.3"
flake8-import-order = "^0.18.1"
flake8-bugbear = "^22.7.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
